Bug 888765 - Avoid querying for titlebar info during toolkit window creation, causes problems on Win8 with browser startup. r=bbondy